# securedrop-workstation

./: .dockerignore  .flake8  .fpf-verification.kbx  .git-blame-ignore-revs  .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  SOURCE_OFFER  VERSION  changelog.md  config.json  config.json.example  dev-requirements.in  dev-requirements.txt  dev-rpm-repo.yml  dev-rpm-repo.yml.sig  project.json  pyproject.toml  reboot_sdw_vms.py  requirements.in  requirements.txt  reset.sh  run.sh  securedrop_workstation.yaml  setup.py  test_reboot_sdw_vms.py  update_version.py  update_version.sh
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  workstation-ci.yml
.semgrep/: saltstack-rules.yml
admin_salt/: sd-admin-config.sls  sd-admin-packages.sls  sd-admin-template.sls  sd-admin.sls  sd-admin.top
architecture-decisions/: 001-keyring.md
bootstrap/: DevDockerfile  Dockerfile  qubes-dom0.repo
builder/: Makefile  Pipfile  build-workstation-template  image_hash  requirements.in  requirements.txt
decrypt/: application-x-sd-xfer.xml  config-dvm  decrypt-sd-submission  decrypt-sd-submission.desktop  notes
dom0/: .sd-decrypt.sls.swp  fpf-apt-repo.sls  fpf-apt-test-repo-stretch.sls  fpf-apt-test-repo.sls  qubesdb-config.sls  remove-tags  remove-tags.py  sd-app-config.sls  sd-app-enable-logging.sls  sd-app-files.sls  sd-app-mime-handling.sls  sd-app.sls  sd-base-template-files.sls  sd-base-template.sls  sd-clean-all.sls  sd-clean-default-dispvm.sls  sd-clean-whonix.sls  sd-decrypt-files.sls  sd-decrypt-files.top  sd-decrypt.sls  sd-decrypt.top  sd-default-config.sls  sd-default-config.yml  sd-devices-dvm-enable-logging.sls  sd-devices-files.sls  sd-devices-mime-handling.sls  sd-devices.sls  sd-disp-vm-cleanup.sls  sd-disp-vm-cleanup.top  sd-dispvm-files.sls  sd-dispvm-files.top  sd-dispvm.sls  sd-dispvm.top  sd-dom0-crontab.sls  sd-dom0-files.sls  sd-dom0-files.top  sd-dom0-qvm-rpc.sls  sd-dom0-qvm-rpc.top  sd-dom0-systemd.sls  sd-dom0-vm-declarations.sls  (+84 more)
dom0-scripts/: remove-tags  update-xfce-settings
files/: 10-securedrop-logind_override.conf  31-securedrop-workstation.policy  32-securedrop-workstation.policy  95-securedrop-systemd-user.preset  app-press.freedom.SecureDropUpdater@autostart.service  clean-salt  config.json.example  destroy-vm  destroy-vm.py  dom0-xfce-desktop-file.j2  fix-connections.py  logind-override-disable.service  migration_steps.py  migrations.py  press.freedom.SecureDropUpdater.desktop  press.freedom.SecureDropUpdaterApp.desktop  press.freedom.SecureDropUpdaterClient.desktop  provision-all  sdlog.conf  sdw-admin.py  sdw-desktop-trust.py  sdw-login  sdw-login.py  sdw-notify  sdw-notify.py  sdw-notify.service  sdw-notify.timer  sdw-updater  sdw-updater.py  sdw-upgrade.py  securedrop-logind-override-disable.service  securedrop-user-dom0-rpm-key-reimport.service  securedrop-user-xfce-icon-size.service  securedrop-user-xfce-settings.service  securedrop.GetJournalistSecretKeys  securedrop.GetJournalistSecretKeys.py  securedrop.GetSecretKeys.py  template-from-qubesdb.py  update-xfce-settings  validate_config.py
launcher/: Makefile  README.md  dev-requirements-pyqt4.txt  dev-requirements.in  dev-requirements.txt  qt5-requirements.txt  sdw-launcher.py  sdw-notify.py  sdw_notify  sdw_updater  sdw_util  test-requirements.in  test-requirements.txt
migrations/: README.md
requirements/: dev-requirements.in  dev-requirements.txt
rpm_spec/: securedrop-workstation.spec
scripts/: bootstrap-keyring.py  build-admin-rpm.sh  build-dom0-rpm  build-rpm.sh  clean-salt  clone-to-dom0  common.sh  configure-environment  configure-environment.py  container.sh  destroy-vm  fake-setarch.py  flake8-linting  handle-upgrade  install-admin-rpm  lint-all  list-vms  prep-dev  prep-salt  provision-all  publish-rpm  remove-tags  rpm-docker-build  rpm-docker-source  rpm-docker-ver  rpm-dom0-package  rpm-s3-publish.py  rpmbuilder.Dockerfile  sdw-admin.py  securedrop-admin.py  shellcheck.sh  switch-apt-source.py  test-install-rpm.sh  try-client-pr.py  update-fedora-templates  update-whonix-templates  validate-config  validate_config.py  verify_rpm_mtime.py
sd-app/: config.json.j2
sd-decrypt/: decrypt-sd-submission  decrypt-sd-submission.desktop  dot-profile
sd-export/: application-x-sd-export.xml  config.json.j2  send-to-usb  send-to-usb.desktop  test_export.py
sd-journalist/: README  dev-monitor.py  do-not-open-here  do-not-open.desktop  mimeapps.list  mm.py  move-to-svs  pipereader.py  rc.local  sd-process-display  sd-process-download  sd-process-download.desktop  sd-process-feedback  sd-process.Feedback  sd-process.Feedback-dom0  sd_process_display.py
sd-proxy/: do-not-open-here  do-not-open.desktop  mimeapps.list  sd-proxy.yaml
sd-svs/: README  accept-sd-xfer-extracted  accept-sd-xfer-extracted.desktop  application-x-sd-xfer-extracted.xml  decrypt-sd-submission  decrypt-sd-submission.desktop  mimeapps-sd-svs-disp.list  mimeapps.list  mimeapps.list.orig  open-in-dvm.desktop
sd-whonix/: app-journalist.yaml
sd-workstation/: apt-test_freedom_press.sources.j2  apt_freedom_press.sources.j2  securedrop-workstation-config_0.1.3+buster_all.deb  securedrop-workstation-config_0.1.5+buster_all.deb  securedrop-workstation-svs-disp_0.2.2+buster_all.deb  securedrop-workstation-svs-disp_0.2.3+buster_all.deb
sdw_notify/: Notify.py  NotifyApp.py
sdw_updater/: Updater.py  UpdaterApp.py  UpdaterAppUiQt5.py  UpdaterAppUiQt6.py  sdw_updater.ui  strings.py
sdw_util/: Util.py  config_types.py
securedrop_salt/: 99-sd-devices.rules  apt_freedom_press.sources.j2  fpf-apt-repo.sls  press.freedom.SecureDropUpdater.desktop  press.freedom.SecureDropUpdater.desktop.j2  remove-tags.py  sd-app-files.sls  sd-app.sls  sd-attach-export-device  sd-base-template-files.sls  sd-base-template-packages.sls  sd-base-template.sls  sd-clean-all.sls  sd-clean-default-dispvm.sls  sd-default-config.sls  sd-default-config.yml  sd-devices-files.sls  sd-devices.sls  sd-dom0-files.sls  sd-dom0-systemd.sls  sd-gpg-files.sls  sd-gpg-template-files.sls  (+27 more)
(+170 files in other folders)
