[project]
requires-python = ">=3.13"
name = "securedrop-workstation-dom0-config"
dynamic = [ "version", "classifiers" ]
description = ""
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
    ]
license = {text = "AGPLv3+"}
readme = "README.md"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.1.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
types-setuptools = "^82.0.0"
ruff = "^0.15.18"
python-debian = "^1.1.1"
pysequoia = "^0.1.34"
zizmor = "*"
python-systemd = "^0.0.9"
semgrep = "*"

[tool.poetry.group.system-package-equivalents.dependencies]
# In production these are installed as a system package so match the
# versions exactly.
# NOTE: 'python_version' used as a proxy for the Qubes version:
#    - python 3.13 => Fedora 41 => Qubes 4.3
#    - python 3.?? => Fedora ?? => Qubes ?
PyQt6 = {version = "=6.8.1", markers = "python_version >= '3.13'" }
PyQt6-sip = {version = "=13.9.1", markers = "python_version >= '3.13'" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle errors
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8-gettext
    "INT",
    # flake8-pie
    "PIE",
    # pylint
    "PL",
    # flake8-pytest-style
    "PT",
    # flake8-pyi
    "PYI",
    # flake8-return
    "RET",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # pycodestyle warnings
    "W",
    # Unused noqa directive
    "RUF100",
]
ignore = [
    # code complexity checks that we fail
    "PLR0911",
    "PLR0913",
    "PLR0915",
    # magic-value-comparison, too many violations for now
    "PLR2004",
    # hardcoded passwords, false positive
    "S105",
    # it's fine to use /tmp in dom0, since it's not a multiuser environment
    "S108",
    # flags every instance of subprocess
    "S603",
    # we trust $PATH isn't hijacked
    "S607",
    # superflous-else- rules, find they hurt readability
    "RET505",
    "RET506",
    "RET507",
    "RET508",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**.py" = [
    # Use of `assert` detected
    "S101",
    # Tests use /tmp
    "S108",
    # Use a regular `assert` instead of unittest-style `assertEqual`
    "PT009",
]
"sdw_util/Util.py" = [
    # lock functions return file handles, so it's safe to ignore here
    "SIM115",
]

[tool.mypy]
python_version = "3.13"
# In-tree stubs (currently: qubesadmin) live under stubs/.
mypy_path = "stubs"
# Other dom0-only deps (dnf, qubesdb, systemd, ...) still lack stubs.
ignore_missing_imports = true
# These are individual scripts, not a package/modules
scripts_are_modules = true
# `files/` and `scripts/` are script directories without __init__.py; disambiguate
# module names so the same file isn't picked up twice during the tree walk.
explicit_package_bases = true
# Every function must have a full signature annotation; otherwise mypy skips the
# body and silently misses bytes-vs-str and similar mistakes.
disallow_untyped_defs = true
disallow_incomplete_defs = true
# Check every Python file in the repo. Explicitly list extension-less scripts
# that mypy's default .py discovery would otherwise skip.
files = [
    ".",
    "securedrop_salt/securedrop-login",
]
exclude = [
    # Third-party packages; not maintained by us.
    "\\.venv/",
    # Duplicate Python files from the RPM build process
    "rpm-build/",
    # Symlinks to sdw_updater/, sdw_notify/, sdw_util/, which are already checked.
    "launcher/",
]

# Autogenerated by pyuic6; any manual annotations would be overwritten on the next run.
[[tool.mypy.overrides]]
module = "sdw_updater.UpdaterAppUiQt6"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=sdw_notify --cov=sdw_updater --cov=sdw_util --junitxml=test-data.xml"

# Registering custom pytest markers for tests. Allows selecting or skipping by marked groups.
markers = [
  "mime: checks for filetype/application associations; requires shell access",
  "slow: long-running tests, longer than 1m in runtime",
  "packages: checks that all packages are up to date; quite slow, generally",
  "provisioning: checks that VMs exist and their extra-VM prefs are set correctly",
  "configuration: assumes that VMs exist inspects their intra-VM files and folders",
]
